--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p>For this framework to work, we need three key roles: The product owner, the scrum master,
             and team.
         </p>
+        <h2>New Feature added</h2>
     </div>
 </body>
 </html>
